manifests/base/marketplace-fe-portal-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portal
  name: marketplace-fe-portal
  namespace: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portal
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: portal
    spec:
      containers:
      - image: image
        name: portal
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "256m"
