manifests/base/marketplace-fe-portal-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portal
  name: portal-nodeport-svc
  namespace: frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 32122
  selector:
    app: portal
  type: NodePort
